ficed some bugs and made it more accessible on mobile devices

--- a/public/styles/mainPage.css
+++ b/public/styles/mainPage.css
@@ -86,18 +86,6 @@ button:hover {
     grid-area: rsbar;
 }
 
-.copy-row-info {
-    cursor: copy;
-    font-size: 16px;
-    border-radius: 10px;
-    margin: 0px 10px;
-    padding: 1px;
-}
-
-.copy-row-info:hover {
-    box-shadow: 0px 0px 5px rgb(0, 0, 0);
-}
-
 ::-webkit-calendar-picker-indicator {
     cursor: pointer;
     margin-left: -20px;
@@ -131,6 +119,18 @@ button:hover {
     height: 15px;
     width: 8px;
     margin-right: 10px;
+}
+
+.copy-row-info {
+    cursor: copy;
+    font-size: 16px;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding: 1px;
+}
+
+.copy-row-info:hover {
+    box-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
 
 .rowM {
